--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     /> -->
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
      
-    <title>React App</title>
+    <title>Todo App</title>
   </head>
 
   <body>
